<resources>
    <string name="app_name">Funseum</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dialog_title_backup">Backup</string>
    <string name="dialog_message_backup">Do you want to backup your current data?</string>
    <string name="dialog_title_restore">Restore</string>
    <string name="dialog_message_restore">Do you want to restore your data from cloud?</string>
    <string name="dialog_title_download">Download Cards</string>
    <string name="dialog_message_download">Do you want to download questions from library?</string>
    <string name="dialog_title">Password must be >5 characters</string>
    <string name="dialog_message">"Login failed"</string>
    <string name="channel_name">Museum Channel</string>
    <string name="channel_description">Channel for museum</string>
</resources>